[package]
name = "rpi-pal"
# Also update html_root_url in lib.rs
version = "0.22.2"
edition = "2021"
rust-version = "1.60"
authors = ["Rene van der Meer <rene@golemparts.com>"]
description = "Interface for the Raspberry Pi's GPIO, I2C, PWM, SPI and UART peripherals."
documentation = "https://docs.rs/rpi-pal"
repository = "https://github.com/rpi-pal/rpi-pal"
readme = "README.md"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["raspberry", "pi", "embedded-hal", "embedded-hal-impl", "hal"]

[dependencies]
libc = "0.2"
embedded-hal = { version = "1", optional = true }
embedded-hal-nb = { version = "1", optional = true }
void = { version = "1.0.2", optional = true }
spin_sleep = { version = "1.0.0", optional = true }

[dev-dependencies]
simple-signal = "1.1.1"

[features]
default = []
embedded-hal = ["dep:embedded-hal", "dep:spin_sleep"]
embedded-hal-nb = ["dep:embedded-hal-nb", "embedded-hal"]
hal = ["embedded-hal", "embedded-hal-nb"]
